--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
   },
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
-    "axios": "^1.8.3",
+    "@react-oauth/google": "^0.12.1",
+    "axios": "^1.8.4",
+    "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
     "framework7-react": "^8.3.4",
+    "helmet": "^8.1.0",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.3.0",
+    "react-router-dom": "^7.5.0",
+    "react-toastify": "^11.0.5",
     "styled-components": "^6.1.16",
     "swiper": "^11.2.5"
   },
